fixed some of the grammer and spacing in my previous commits and found some more text-transfrom to remove and fix

--- a/frontend/src/core/user/components/UserNotification.css
+++ b/frontend/src/core/user/components/UserNotification.css
@@ -112,4 +112,5 @@
     font-weight: normal;
     margin-top: 8px;
     text-align: right;
+    text-transform: uppercase;
 }
